[package]
name = "jcoin"
version = "0.1.0"
authors = ["Jesko Dujmovic <jeskowastaken@posteo.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sha3 = "0.9.1"
hex-literal = "0.3.3"
generic-array = "0.14.4"
ed25519 = "1.2.0"
ed25519-dalek = "1.0.1"